# symbolic-cube-explorer

./: .gitignore  LICENSE  Makefile  NOTICE.md  README.md  README.md.bak.2026-03-08_072604  README.md.bak.2026-03-08_072621  demo.py  font_test.html  fonts_diag.sh  pyproject.toml  requirements.txt  test_plot.py
docs/: ARCHITECTURE.md  DEPENDENCY_CHAIN.md  REPO_MAP.md  STATUS.md
docs/provenance/: migration-log.md
examples/: animate_cube_walk.py  closure_field_test.py  concept_atlas.py  cross_attractor_test.py  cycle_analysis.py  enochian_walk.py  entropy_heatmap.py  evolution_dynamics_test.py  grammar_analysis.py  hypercube_walk.py  lineage_threshold_q4.py  lineage_threshold_test.py  long_walk.py  random_walk.py  relaxation_dynamics_test.py  repair_operator_test.py  run_enochian.py  run_runes.py  run_sefer.py  rune_walk.py  sefer_walk.py  switch_capacity_test.py  symbol_transition_graph.py  visualize_cube.py  visualize_q4_tesseract.py
experiments/: analyze_universes.py  evolve_universes.py  exploration_demo.py  extract_rules.py  q3_walk.js  transition_demo.py  universe_scan.py
src/cube_explorer/: __init__.py  __main__.py  analysis.py  attractors.py  backtrack.py  core.py  experiments.py  grammar.py  graycode.py  hamiltonian.py  hypercube.py  symmetry.py  transitions.py  utils.py  visualization.py
src/symbolic_cube_explorer.egg-info/: SOURCES.txt
symbolic_cube_explorer/: core.py
symbolic_cube_explorer/analysis/: attractors.py
symbolic_cube_explorer/exploration/: engine.py
tests/: test_engine_determinism.py  test_grammars_basic.py
(+22 files in other folders)
