[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-cube-explorer"
version = "0.1.0"
description = "Symbolic dynamical system on a hypercube"
authors = [{name="Linda Thorstensen"}]
requires-python = ">=3.9"
dependencies = ["numpy","plotly"]

[tool.setuptools.packages.find]
where = ["src"]
